--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "webpack5",
+  "name": "env",
   "version": "1.0.0",
-  "description": "",
+  "description": "рабочее окружение yarn",
   "main": "index.js",
+  "repository": "git@github.com/Tatiana-Nikonova/env.git",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint .",
+    "lint-fix": "eslint . --fix .",
     "test": "jest",
     "coverage": "jest --coverage",
     "doc": "jsdoc -c jsdoc.conf.json",
@@ -17,7 +19,7 @@
     "preshow:dist": "npm run build",
     "show:dist": "live-server dist"
   },
-  "author": "coursar",
+  "author": "Tatiana Nikonova",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -28,16 +30,18 @@
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.3.3",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.8",
     "terser-webpack-plugin": "^5.0.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {}
 }
